Fix overflow on local path and add title

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -535,6 +535,14 @@ body {
       }
     }
   }
+
+  .dat-local-path {
+
+    .path {
+      &:extend(.overflow-ellipsis);
+      max-width: 340px;
+    }
+  }
 }
 
 .view .staging {
